[tool.poetry]
name = "doppelganger"
version = "0.1.0"
description = "Create a file with an alternative extention from an original file."
authors = ["yucharotaro <yucharotaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
